@@ -663,8 +663,12 @@ foobar_widget_set_clock_format (FoobarWidget *foo, const char *clock_format)
 void
 foobar_widget_update_winhints (FoobarWidget *foo)
 {
-#if FIXME
 	GtkWidget *w = GTK_WIDGET (foo);
+	gtk_window_set_decorated (GTK_WINDOW (w), FALSE);
+	gtk_window_stick (GTK_WINDOW (w));
+	gtk_window_set_type_hint (GTK_WINDOW (w),
+				  GDK_WINDOW_TYPE_HINT_MENU);
+#if FIXME  /* Nearly all of this is old cruft and should just be removed. We need to use the new wm spec instead */
 	GnomeWinLayer layer;
 
 	if ( ! foo->compliant_wm)
